--- a/disqus/templates/discussion.html
+++ b/disqus/templates/discussion.html
@@ -30,11 +30,15 @@
             <p>{{post.text | markdown}}</p>
           </div>
           {% endif %}
+          {% if user.is_authenticated %}
           <form method="post" action="">
             {% csrf_token %}
             {{ form | bootstrap }}
             <button type="submit" class="btn btn-default">Add Comment</button>
           </form>
+          {% else %}
+            <p>Please login to continue</p>
+          {% endif %}
       </div>
   </div>
   <div class="comments">
